# FLP-Math

./: Cargo.toml  LICENSE  README.md
src/: bound.rs  evaluate.rs  growth.rs  lib.rs  progress.rs
src/evaluate/: expression.rs  value_map.rs
src/evaluate/expression/: atom.rs  operation.rs
